First step of fixing creating and deleting vehicles and creating rentals